Fixed layout problems, started service pane
- Updated bootstrap layout
- refactored the markup for overall layout with better functionality
- added footer
- updated css for links
- started implementing the service pane

--- a/css/style.less
+++ b/css/style.less
@@ -1,7 +1,40 @@
 @background-main: #6c8254;
 @background-content: #f5f5f1;
 @background-header: #820000;
+@link-main: #820000;
+@link-hover:  #6c8254;
+@navbarInverseBackground:                #292724;
+@grayLight:             #c4c0b5;
 
+div {
+  
+}
+
+a {
+  color: @link-main;
+  font-weight: bold;
+}
+
+a:visited {
+  color: darken(@link-main, 8%);
+  text-decoration: none;
+}
+
+a:hover {
+  color: @link-hover;
+  text-decoration: none;
+}
+
+.a-inverse {
+  color: @link-hover;
+  font-weight: normal;
+  padding: 0 15px;
+}
+
+.a-inverse:visited {
+  color: darken(@link-hover, 8%);
+  font-weight: normal;
+}
 
 body {
   background: @background-main;
@@ -15,86 +48,76 @@ h2, h3, h4 {
   font-family: 'Lato', sans-serif;
 }
 
+/* Service Pane */
+.service-pane {
+  margin-top: 15px;
+  padding: 0px;
+}
+
+.service-pane-top {
+  height: 200px;
+  padding: 5px 15px;
+  background-color: @navbarInverseBackground;
+  color: @grayLight;
+}
+
+.service-pane-top:hover {
+  height: 200px;
+  padding: 5px 15px;
+  background-color: @grayLight;
+  color: @navbarInverseBackground;
+}
+
+.service-pane-bottom:hover + .service-pane-top {
+  height: 200px;
+  padding: 5px 15px;
+  background-color: @grayLight;
+  color: @navbarInverseBackground;
+}
+
+.service-pane-bottom {
+  padding: 15px;
+  font-size: 0.75em;
+  background-color: #c4c0b5;
+  text-align: center;
+}
+
 /* Content Divs */
 .header {
-    padding: 20px;
-    height: 60px; 
+    padding: 12px 25px;
+    height: 80px; 
     color: lighten(black, 13%);
     background-color: @background-header;   
 }
 
 .content {
-    padding: 15px;
     min-height: 800px; 
     background-color: @background-content;   
-    font-size: 1.3em;
+    font-size: 1.3em; 
     font-family: 'Lora', serif;
 }
 
+.content-padding {
+    padding: 10px 25px;
+}
 
+.footer-padding {
+  padding: 30px;
+}
+
+.footer {
+  display: inline-block;
+  text-align: center;
+  min-height: 100px;
+  background-color: @navbarInverseBackground;
+  color: @grayLight;
+}
+
+/* Navbar */
 .navbar-inner {    
-
     font-family: 'Lato', sans-serif;
     border-radius: 0 !important;
     -moz-border-radius: 0 !important;
     -webkit-border-radius: 0 !important;
 }
 
-
-/* navbar */
-@bgDefault      : #3e372f;
-@bgHighlight    : #292724;
-@colDefault     : #f7f7f5;
-@colHighlight   : #c4c0b5;
-/*                        
-.navbar-inverse .navbar-inner {
-  background-color: @bgDefault;
-  background-image: -moz-linear-gradient(top, @bgDefault, @bgHighlight);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@bgDefault), to(@bgHighlight));
-  background-image: -webkit-linear-gradient(top, @bgDefault, @bgHighlight);
-  background-image: -o-linear-gradient(top, @bgDefault, @bgHighlight);
-  background-image: linear-gradient(to bottom, @bgDefault, @bgHighlight);
-  background-repeat: repeat-x;
-  border-color: #252525;
-  
-}
-
-.navbar-inverse .brand,
-.navbar-inverse .nav > li > a {
-  color: @bgDefault;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-
-.navbar-inverse .brand:hover,
-.navbar-inverse .nav > li > a:hover,
-.navbar-inverse .brand:focus,
-.navbar-inverse .nav > li > a:focus {
-  color: #00ff00;
-}
-
-.navbar-inverse .brand {
-  color: @colDefault;
-}
-
-.navbar-inverse .navbar-text {
-  color: @colDefault;
-}
-
-.navbar-inverse .nav > li > a:focus,
-.navbar-inverse .nav > li > a:hover {
-  color: @colHighlight;
-  background-color: transparent;
-}
-
-.navbar-inverse .nav .active > a,
-.navbar-inverse .nav .active > a:hover,
-.navbar-inverse .nav .active > a:focus {
-  color: @colDefault;
-  background-color: darken(@bgHighlight, 5%);
-}
-
-.navbar-inverse .navbar-link {
-  color: @colDefault;
-}
-
-    */   
