--- a/less/navbar.less
+++ b/less/navbar.less
@@ -9,6 +9,7 @@
 // Base class and wrapper
 .navbar {
   
+  font-family: 'Lato', sans-serif;
   overflow: visible;
   margin-bottom: @baseLineHeight;
 
